--- a/JS01/TP_JS01.ipynb
+++ b/JS01/TP_JS01.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMxGpO+rAmVDFPHaJDmWb+a",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/4rdnac/Machine-Learning_2025/blob/main/TG1_2341720187_CANDRA_AHMAD_DANI.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,21 +12,21 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Tugas Praktikum 1"
-      ],
       "metadata": {
         "id": "I5HCMsvZgAoc"
-      }
+      },
+      "source": [
+        "# Tugas Praktikum 1"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Bagian 1"
-      ],
       "metadata": {
         "id": "rC59f8FlhAbl"
-      }
+      },
+      "source": [
+        "## Bagian 1"
+      ]
     },
     {
       "cell_type": "code",
@@ -56,8 +40,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting pyprep\n",
             "  Downloading pyprep-0.5.0-py3-none-any.whl.metadata (7.3 kB)\n",
@@ -165,6 +149,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "pTlht9s0gLc2"
+      },
       "source": [
         "- **PyPREP** → Membersihkan sinyal EEG dari noise & bad channels.  \n",
         "  *Contoh:* `PrepPipeline(raw, montage).fit()`  \n",
@@ -177,47 +164,61 @@
         "\n",
         "- **pyECG** → Analisis sinyal ECG (detak jantung, ekstraksi fitur).  \n",
         "  *Contoh:* `ecg.extract_heartbeats(signal, fs=250)`  \n"
-      ],
-      "metadata": {
-        "id": "pTlht9s0gLc2"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Bagian 2"
-      ],
       "metadata": {
         "id": "O3iqibhFhD-3"
-      }
+      },
+      "source": [
+        "## Bagian 2"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "1. Contoh Tindakan Melanggar Etika dan Hukum dalam Penggunaan Kecerdasan Buatan\n",
-        "\n",
-        "Salah satu contoh nyata adalah deepfake yang digunakan untuk menyebarkan konten pornografi non-konsensual atau misinformasi politik. Kasus ini melanggar etika karena merugikan privasi individu dan dapat mencemarkan nama baik seseorang. Dari sisi hukum, banyak negara telah mengatur larangan distribusi konten semacam ini karena termasuk dalam pelanggaran hak privasi dan pencemaran nama baik. Misalnya, di Amerika Serikat, beberapa negara bagian seperti California sudah memberlakukan undang-undang yang melarang penggunaan deepfake untuk tujuan pornografi tanpa izin atau manipulasi pemilu.\n",
-        "Referensi: Chesney, R., & Citron, D. (2019). Deep Fakes: A Looming Challenge for Privacy, Democracy, and National Security. California Law Review, 107(6), 1753–1820.\n",
-        "\n",
-        "2. Dampak Energi dan Lingkungan dari Pemanfaatan Kecerdasan Buatan dan Cara Mengatasinya\n",
-        "\n",
-        "Pelatihan model AI berskala besar, seperti GPT atau model visi komputer, membutuhkan daya komputasi tinggi yang menghasilkan konsumsi energi signifikan. Hal ini berdampak pada jejak karbon yang cukup besar. Misalnya, penelitian Strubell et al. (2019) menemukan bahwa melatih satu model NLP besar dapat menghasilkan emisi karbon setara dengan lima kali siklus hidup mobil rata-rata. Dampak lingkungan ini menimbulkan keprihatinan, apalagi jika pusat data masih bergantung pada sumber energi fosil.\n",
-        "\n",
-        "Untuk mengatasinya, menurut pendapat saya, ada beberapa langkah:\n",
-        "\n",
-        "Optimalisasi algoritma (misalnya dengan teknik model pruning, quantization, dan distillation) agar lebih hemat energi.\n",
-        "\n",
-        "Pemanfaatan energi terbarukan di pusat data, misalnya energi surya atau angin.\n",
-        "\n",
-        "Reuse model melalui transfer learning, sehingga tidak perlu melatih ulang model besar dari awal.\n",
-        "\n",
-        "Kebijakan regulasi hijau untuk perusahaan teknologi agar transparan soal konsumsi energi dan emisi karbon dari layanan AI.\n",
-        "\n",
-        "Referensi: Strubell, E., Ganesh, A., & McCallum, A. (2019). Energy and Policy Considerations for Deep Learning in NLP. Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics."
-      ],
       "metadata": {
         "id": "UYuRQNYifl4c"
-      }
+      },
+      "source": [
+        "1. Contoh Tindakan Melanggar Etika dan Hukum dalam Penggunaan AI\n",
+        "\n",
+        "    Salah satu contoh pelanggaran adalah penggunaan deepfake untuk menyebarkan konten pornografi non-konsensual atau misinformasi politik. Praktik ini tidak etis karena merugikan privasi, mencemarkan nama baik, dan dapat mempengaruhi opini publik secara tidak sah. Secara hukum, beberapa negara telah mengatur larangan distribusi konten deepfake tersebut. Misalnya, negara bagian seperti California (AS) telah memberlakukan undang-undang yang melarang pembuatan dan penyebaran deepfake pornografi tanpa izin serta manipulasi konten terkait pemilu.\n",
+        "\n",
+        "    Referensi: Chesney, R., & Citron, D. (2019). Deep Fakes: A Looming Challenge for Privacy, Democracy, and National Security. California Law Review, 107(6), 1753–1820.\n",
+        "\n",
+        "2. Dampak Energi dan Lingkungan dari Pemanfaatan AI dan Cara Mengatasinya\n",
+        "\n",
+        "    Pelatihan model AI besar membutuhkan daya komputasi sangat tinggi sehingga menghasilkan konsumsi energi besar dan meningkatkan jejak karbon. Penelitian Strubell et al. (2019) menunjukkan bahwa melatih satu model NLP besar dapat menghasilkan emisi karbon setara dengan lima kali siklus hidup mobil rata-rata. Dampak ini semakin memprihatinkan jika pusat data masih menggunakan energi berbasis fosil.\n",
+        "\n",
+        "* Cara Mengatasi Dampak Lingkungan AI\n",
+        "\n",
+        "* Optimalisasi algoritma (pruning, quantization, distillation) agar lebih efisien.\n",
+        "\n",
+        "* Penggunaan energi terbarukan untuk pusat data seperti tenaga surya atau angin.\n",
+        "\n",
+        "* Transfer learning, sehingga tidak perlu melatih model besar dari awal.\n",
+        "\n",
+        "* Kebijakan regulasi hijau, mewajibkan transparansi konsumsi energi dan emisi karbon dari teknologi AI.\n",
+        "\n",
+        "    Referensi: Strubell, E., Ganesh, A., & McCallum, A. (2019). Energy and Policy Considerations for Deep Learning in NLP. Proceedings of ACL 2019.\n"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMxGpO+rAmVDFPHaJDmWb+a",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
